--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,13 @@ regex = "^2024.4.28"
 tqdm = "^4.66.2"
 setuptools = "^69.5.1"
 scikit-learn = "^1.4.2"
+wandb = "^0.17.0"
+h5py = "^3.11.0"
+transformers = "^4.41.1"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
 
 [build-system]
 requires = ["poetry-core"]
