--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-data/
+logs
+data
 tang-2023-reproduction/
 poetry.lock
 *.ipynb
@@ -163,3 +164,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.conda_config
