--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Louis Jalouzot <louis.jalouzot@ens-lyon.fr>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -14,7 +15,6 @@ numpy = "^1.26.4"
 clip = {git = "https://github.com/openai/CLIP.git"}
 ftfy = "^6.2.0"
 regex = "^2024.4.28"
-tqdm = "^4.66.2"
 setuptools = "^69.5.1"
 scikit-learn = "^1.4.2"
 wandb = "^0.17.0"
