--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ h5py = "^3.11.0"
 transformers = "^4.41.1"
 skorch = "^1.0.0"
 torchmetrics = "^1.4.0.post0"
+torchaudio = "^2.3.1"
+pysoundfile = "^0.9.0.post1"
 
 
 [tool.poetry.group.dev.dependencies]
