--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ librosa = "^0.10.2.post1"
 sentence-transformers = "^3.0.1"
 torchvision = "^0.18.1"
 transformers = "^4.41.2"
+pandas = "^2.2.2"
+soundfile = "^0.12.1"
 
 
 [tool.poetry.group.dev.dependencies]
