--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ wandb = "^0.17.0"
 h5py = "^3.11.0"
 torchmetrics = "^1.4.0.post0"
 torchaudio = "^2.3.0"
-pysoundfile = "^0.9.0.post1"
 termcolor = "^2.4.0"
 pytorch-ignite = "^0.5.0.post2"
 visdom = "^0.2.4"
@@ -28,6 +27,8 @@ librosa = "^0.10.2.post1"
 sentence-transformers = "^3.0.1"
 torchvision = "^0.18.1"
 transformers = "^4.41.2"
+pandas = "^2.2.2"
+soundfile = "^0.12.1"
 
 
 [tool.poetry.group.dev.dependencies]
