--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ torchvision = "^0.18.1"
 transformers = "^4.41.2"
 pandas = "^2.2.2"
 soundfile = "^0.12.1"
+nibabel = "^5.2.1"
+chardet = "^5.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
