--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ chardet = "^5.2.0"
 nilearn = "^0.10.4"
 dask = "^2024.7.1"
 xarray = "^2024.6.0"
+zarr = "^2.18.2"
 
 
 [tool.poetry.group.dev.dependencies]
