--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ nilearn = "^0.10.4"
 dask = {extras = ["distributed"], version = "^2024.7.1"}
 xarray = "^2024.6.0"
 zarr = "^2.18.2"
+joblib-progress = "^1.0.5"
 
 
 [tool.poetry.group.dev.dependencies]
