--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ termcolor = "^2.4.0"
 pytorch-ignite = "^0.5.0.post2"
 visdom = "^0.2.4"
 librosa = "^0.10.2.post1"
-"sentence-transformers[train]" = "^3.0.1"
+sentence-transformers = { version = "^3.0.1", extras = ["train"] }
 torchvision = "^0.18.1"
 transformers = "^4.41.2"
 pandas = "^2.2.2"
