--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ chardet = "^5.2.0"
 nilearn = "^0.10.4"
 joblib-progress = "^1.0.5"
 h5py = "^3.11.0"
+nltk = "^3.9.1"
+werpy = "^2.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
