--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ joblib-progress = "^1.0.5"
 h5py = "^3.11.0"
 nltk = "^3.9.1"
 werpy = {git = "https://github.com/LouisJalouzot/werpy"}
+evaluate = "^0.4.3"
+bert-score = "^0.3.13"
 
 
 [tool.poetry.group.dev.dependencies]
