--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,9 +41,10 @@ nilearn = "^0.10.4"
 joblib-progress = "^1.0.5"
 h5py = "^3.11.0"
 nltk = "^3.9.1"
-werpy = {git = "https://github.com/LouisJalouzot/werpy"}
 evaluate = "^0.4.3"
 bert-score = "^0.3.13"
+fuzzywuzzy = "^0.18.0"
+python-levenshtein = "^0.26.0"
 
 
 [tool.poetry.group.dev.dependencies]
