--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ dependencies = [
     "transformers>=4.41.2",
     "visdom>=0.2.4",
     "wandb>=0.17.0",
+    "hydra-core>=1.3.2",
+    "hydra-colorlog>=1.2.0",
+    "omegaconf>=2.3.0",
 ]
 
 [project.optional-dependencies]
