--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "hydra-core>=1.3.2",
     "hydra-colorlog>=1.2.0",
     "omegaconf>=2.3.0",
+    "hydra-optuna-sweeper>=1.2.0",
 ]
 
 [project.optional-dependencies]
