--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ dependencies = [
     "nltk>=3.9.1",
     "numpy>=1.26.4",
     "pandas>=2.2.2",
-    "python-levenshtein>=0.26.0",
     "pytorch-ignite>=0.5.0.post2",
     "regex>=2024.4.28",
     "rich>=13.7.1",
@@ -36,12 +35,14 @@ dependencies = [
     "transformers>=4.41.2",
     "visdom>=0.2.4",
     "wandb>=0.17.0",
+    "omegaconf>=2.3.0",
+    "llm2vec",
     "hydra-core>=1.3.2",
     "hydra-colorlog>=1.2.0",
-    "omegaconf>=2.3.0",
+    "hydra-joblib-launcher>=1.2.0",
+    "hydra-submitit-launcher>=1.2.0",
     "hydra-optuna-sweeper>=1.2.0",
     "sqlalchemy==1.4.46",
-    "llm2vec",
 ]
 
 [project.optional-dependencies]
@@ -52,9 +53,6 @@ notebook = [
 ]
 aws = [
     "awscli>=1.36.12",
-]
-grid-search = [
-    "optuna-dashboard>=0.14.0",
 ]
 
 [tool.uv.sources]
