--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -63,4 +63,6 @@ wrapper_cfg:
   activation_layer_first: ${decoder_cfg.activation_layer_first}
 
 hydra:
+  run:
+    dir: outputs/${hydra.job.config_name}/${now:%Y-%m-%d}/${now:%H-%M-%S}
   output_subdir: ""
