--- a/configs/experiment_fine_tune.yaml
+++ b/configs/experiment_fine_tune.yaml
@@ -1,18 +1,9 @@
 defaults:
-  - slurm
+  - experiment_compare_approach
   - _self_
 
 meta:
-  log_wandb: true
   tags: [fine_tune]
-
-datasets: lebel2023_balanced
-fine_tune_cfg:
-  lebel2023_balanced:
-    - null
-
-splitting:
-  n_folds: 5
 
 hydra:
   launcher:
@@ -20,4 +11,5 @@ hydra:
     mem_gb: 50
   sweeper:
     params:
+      ++dataset: lebel2023_balanced
       ++subjects.lebel2023_balanced: UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08
