--- a/configs/experiment_single_subject.yaml
+++ b/configs/experiment_single_subject.yaml
@@ -1,22 +1,13 @@
 defaults:
-  - slurm
+  - experiments
   - _self_
 
-meta:
-  log_wandb: true
-  tags: [single_subject]
-
 datasets: lebel2023_balanced
-subjects:
-  lebel2023_balanced: null
 
-splitting:
-  n_folds: 5
+meta:
+  tags: [single_subject,lebel2023_balanced]
 
 hydra:
-  launcher:
-    cpus_per_task: 5
-    mem_gb: 50
   sweeper:
     params:
       ++subjects.lebel2023_balanced: UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08
