Adapt for new cluster

--- a/configs/experiments.yaml
+++ b/configs/experiments.yaml
@@ -1,14 +1,10 @@
 defaults:
-  - slurm
+  - multirun
   - _self_
 
 meta:
   log_wandb: true
+  cache: true
 
 splitting:
   n_folds: 5
-
-hydra:
-  launcher:
-    cpus_per_task: 5
-    mem_gb: 50
