--- a/configs/experiments.yaml
+++ b/configs/experiments.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - multirun
+  - slurm
   - _self_
 
 meta:
@@ -8,3 +8,8 @@ meta:
 
 splitting:
   n_folds: 5
+
+hydra:
+  launcher:
+    cpus_per_task: 5
+    mem_gb: 50
