Pyright settings in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,16 @@ dependencies = [
     "seaborn>=0.13.2",
     "plotly>=5.24.1",
     "awscli>=1.36.21",
+    "statannotations>=0.7.1",
 ]
 
 [tool.uv.sources]
 joblib-progress = { git = "https://github.com/jonghwanhyeon/joblib-progress" }
 llm2vec = { git = "https://github.com/McGill-NLP/llm2vec" }
+
+[tool.pyright]
+typeCheckingMode = "basic"
+pythonVersion = "3.11"
+include = ["src"]
+reportMissingImports = true
+reportMissingTypeStubs = false
