--- a/configs/experiment_increase_subjects.yaml
+++ b/configs/experiment_increase_subjects.yaml
@@ -8,6 +8,10 @@ meta:
   tags: [increase_subjects]
 
 hydra:
+  launcher:
+    cpus_per_task: 10
+    mem_gb: 100
   sweeper:
     params:
-      ++subjects.lebel2023_fmriprep_balanced: UTS01,[UTS01,UTS02],[UTS01,UTS02,UTS03],[UTS01,UTS02,UTS03,UTS04],[UTS01,UTS02,UTS03,UTS04,UTS05],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08]
+      wrapper_cfg.multi_subject_mode: shared,individual
+      ++subjects.lebel2023_fmriprep_balanced: UTS01,[UTS01,UTS02],[UTS01,UTS02,UTS03],[UTS01,UTS02,UTS03,UTS04],[UTS01,UTS02,UTS03,UTS04,UTS05],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08],UTS02,UTS03,[UTS03,UTS01],UTS04,[UTS04,UTS01],[UTS04,UTS01,UTS02],UTS05,[UTS05,UTS01],[UTS05,UTS01,UTS02],[UTS05,UTS01,UTS02,UTS03],UTS06,[UTS06,UTS01],[UTS06,UTS01,UTS02],[UTS06,UTS01,UTS02,UTS03],[UTS06,UTS01,UTS02,UTS03,UTS04],UTS07,[UTS07,UTS01],[UTS07,UTS01,UTS02],[UTS07,UTS01,UTS02,UTS03],[UTS07,UTS01,UTS02,UTS03,UTS04],[UTS07,UTS01,UTS02,UTS03,UTS04,UTS05],UTS08,[UTS08,UTS01],[UTS08,UTS01,UTS02],[UTS08,UTS01,UTS02,UTS03],[UTS08,UTS01,UTS02,UTS03,UTS04],[UTS08,UTS01,UTS02,UTS03,UTS04,UTS05],[UTS08,UTS01,UTS02,UTS03,UTS04,UTS05,UTS06]
