CanICA dataset function creator

--- a/configs/experiment_increase_subjects.yaml
+++ b/configs/experiment_increase_subjects.yaml
@@ -4,8 +4,11 @@ defaults:
 
 datasets: lebel2023_fmriprep_balanced
 
+splitting:
+  train_ratio: 0.5
+
 meta:
-  tags: [increase_subjects]
+  tags: [increase_subjects,small_data]
 
 hydra:
   launcher:
@@ -13,5 +16,5 @@ hydra:
     mem_gb: 100
   sweeper:
     params:
-      wrapper_cfg.multi_subject_mode: shared,individual
-      ++subjects.lebel2023_fmriprep_balanced: UTS01,[UTS01,UTS02],[UTS01,UTS02,UTS03],[UTS01,UTS02,UTS03,UTS04],[UTS01,UTS02,UTS03,UTS04,UTS05],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08],UTS02,UTS03,[UTS03,UTS01],UTS04,[UTS04,UTS01],[UTS04,UTS01,UTS02],UTS05,[UTS05,UTS01],[UTS05,UTS01,UTS02],[UTS05,UTS01,UTS02,UTS03],UTS06,[UTS06,UTS01],[UTS06,UTS01,UTS02],[UTS06,UTS01,UTS02,UTS03],[UTS06,UTS01,UTS02,UTS03,UTS04],UTS07,[UTS07,UTS01],[UTS07,UTS01,UTS02],[UTS07,UTS01,UTS02,UTS03],[UTS07,UTS01,UTS02,UTS03,UTS04],[UTS07,UTS01,UTS02,UTS03,UTS04,UTS05],UTS08,[UTS08,UTS01],[UTS08,UTS01,UTS02],[UTS08,UTS01,UTS02,UTS03],[UTS08,UTS01,UTS02,UTS03,UTS04],[UTS08,UTS01,UTS02,UTS03,UTS04,UTS05],[UTS08,UTS01,UTS02,UTS03,UTS04,UTS05,UTS06]
+      wrapper_cfg.multi_subject_mode: individual,shared
+      ++subjects.lebel2023_fmriprep_balanced: UTS01,[UTS01,UTS02],[UTS01,UTS02,UTS03],[UTS01,UTS02,UTS03,UTS04],[UTS01,UTS02,UTS03,UTS04,UTS05],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08],UTS02,UTS03,[UTS03,UTS01],[UTS03,UTS02],UTS04,[UTS04,UTS01],[UTS04,UTS01,UTS02],UTS05,[UTS05,UTS01],[UTS05,UTS01,UTS02],[UTS05,UTS01,UTS02,UTS03],UTS06,[UTS06,UTS01],[UTS06,UTS01,UTS02],[UTS06,UTS01,UTS02,UTS03],[UTS06,UTS01,UTS02,UTS03,UTS04],UTS07,[UTS07,UTS01],[UTS07,UTS01,UTS02],[UTS07,UTS01,UTS02,UTS03],[UTS07,UTS01,UTS02,UTS03,UTS04],[UTS07,UTS01,UTS02,UTS03,UTS04,UTS05],UTS08,[UTS08,UTS01],[UTS08,UTS01,UTS02],[UTS08,UTS01,UTS02,UTS03],[UTS08,UTS01,UTS02,UTS03,UTS04],[UTS08,UTS01,UTS02,UTS03,UTS04,UTS05],[UTS08,UTS01,UTS02,UTS03,UTS04,UTS05,UTS06]
