--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "awscli>=1.36.21",
     "statannotations>=0.7.1",
     "fastsrm>=0.0.5",
+    "jupyterlab>=4.3.4",
 ]
 
 [tool.uv.sources]
