--- a/configs/experiment_increase_data.yaml
+++ b/configs/experiment_increase_data.yaml
@@ -10,5 +10,9 @@ meta:
 hydra:
   sweeper:
     params:
+      top_encoding_voxels: 768
+      #,null
+      alignment_cfg.stack: 0
+      #,1,2,3
       ++subjects.lebel2023_fmriprep: UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08
       splitting.train_ratio: 0.05,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,null
