--- a/configs/decoder_cfg/brain_decoder.yaml
+++ b/configs/decoder_cfg/brain_decoder.yaml
@@ -1,12 +1,12 @@
+defaults:
+  - base
+  - _self_
+
 class: BrainDecoder
-hidden_dim: 768
-hidden_dim_projector: 768
-dropout: 0.5
+hidden_dim: ${wrapper_cfg.hidden_dim}
+hidden_dim_projector: ${wrapper_cfg.hidden_dim}
+dropout: ${wrapper_cfg.dropout}
 n_res_blocks: 1
 n_proj_blocks: 1
-norm_type: "ln" # @param ["ln", "bn"]
-activation_layer_first: False
-lr: 0.0001
-lr_ft: 0.00001
-weight_decay: 0.0005
-weight_decay_ft: 0.005
+norm_type: ${wrapper_cfg.norm_type}
+activation_layer_first: ${wrapper_cfg.activation_layer_first}
