--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "awscli>=1.36.21",
     "statannotations>=0.7.1",
     "jupyterlab>=4.3.4",
+    "einops>=0.8.0",
 ]
 
 [tool.uv.sources]
