--- a/configs/grid_search_smn4lang.yaml
+++ b/configs/grid_search_smn4lang.yaml
@@ -15,16 +15,23 @@ hydra:
     sampler:
       seed: 0
     direction: maximize
-    study_name: grid_search_smn4lang
+    study_name: grid_search_smn4lang_v2
     n_trials: 100
     n_jobs: 1
     params:
-      latents_cfg.context_length: range(0,16)
-      alignment_cfg.lag: range(0,10)
-      alignment_cfg.smooth: range(0,10)
-      alignment_cfg.stack: range(0,2)
-      top_encoding_voxels: choice(128,256,512,1024,2048,4096)
-      wrapper_cfg.hidden_dim: choice(128,256,512,1024,2048,4096)
-      decoder_cfg.hidden_dim_projector: choice(128,256,512,1024,2048,4096)
-      decoder_cfg.n_res_blocks: range(1,4)
-      decoder_cfg.n_proj_blocks: range(1,3)
+      # latents_cfg.context_length: range(0,16)
+      # alignment_cfg.lag: range(0,10)
+      # alignment_cfg.smooth: range(0,10)
+      # top_encoding_voxels: choice(128,256,512,1024,2048,4096)
+      # wrapper_cfg.hidden_dim: choice(128,256,512,1024,2048,4096)
+      # decoder_cfg.hidden_dim_projector: choice(128,256,512,1024,2048,4096)
+      # decoder_cfg.n_res_blocks: range(1,4)
+      # decoder_cfg.n_proj_blocks: range(1,3)
+      wrapper_cfg.temperature: tag(log,interval(1e-3,10))
+      latents_cfg.context_length: range(14,30)
+      alignment_cfg.stack: range(2,6)
+      top_encoding_voxels: choice(1024,2048,4096)
+      wrapper_cfg.hidden_dim: choice(1024,2048,4096)
+      decoder_cfg.hidden_dim_projector: choice(1024,2048,4096)
+      decoder_cfg.n_res_blocks: range(0,4)
+      decoder_cfg.n_proj_blocks: range(0,4)
