--- a/configs/experiment_increase_data_123.yaml
+++ b/configs/experiment_increase_data_123.yaml
@@ -4,11 +4,14 @@ defaults:
 
 datasets: lebel2023_fmriprep
 
+splitting:
+  n_folds: 15
+
 meta:
   tags: [increase_data_v2]
 
 hydra:
   sweeper:
     params:
-      +subjects.lebel2023_fmriprep: UTS04,UTS05,UTS06,UTS07,UTS08
+      +subjects.lebel2023_fmriprep: UTS01,UTS02,UTS03
       splitting.train_ratio: 0.05,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,null
