--- a/configs/experiment_increase_subjects.yaml
+++ b/configs/experiment_increase_subjects.yaml
@@ -4,21 +4,140 @@ defaults:
 
 datasets: lebel2023_fmriprep_balanced
 
-splitting:
-  train_ratio: 0.5
-
 meta:
-  tags: [increase_subjects]
+  tags: [increase_subjects_balanced]
 
 hydra:
   launcher:
-    cpus_per_task: 10
-    mem_gb: 100
+    cpus_per_task: 48
   sweeper:
     params:
-      top_encoding_voxels: 768
-      #,null
-      wrapper_cfg.multi_subject_mode: individual
-      #,shared
-      ++subjects.lebel2023_fmriprep_balanced: UTS01,[UTS01,UTS02],[UTS01,UTS02,UTS03],[UTS01,UTS02,UTS03,UTS04],[UTS01,UTS02,UTS03,UTS04,UTS05],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08]
-      #,UTS02,UTS03,[UTS03,UTS01],[UTS03,UTS02],UTS04,[UTS04,UTS01],[UTS04,UTS01,UTS02],UTS05,[UTS05,UTS01],[UTS05,UTS01,UTS02],[UTS05,UTS01,UTS02,UTS03],UTS06,[UTS06,UTS01],[UTS06,UTS01,UTS02],[UTS06,UTS01,UTS02,UTS03],[UTS06,UTS01,UTS02,UTS03,UTS04],UTS07,[UTS07,UTS01],[UTS07,UTS01,UTS02],[UTS07,UTS01,UTS02,UTS03],[UTS07,UTS01,UTS02,UTS03,UTS04],[UTS07,UTS01,UTS02,UTS03,UTS04,UTS05],UTS08,[UTS08,UTS01],[UTS08,UTS01,UTS02],[UTS08,UTS01,UTS02,UTS03],[UTS08,UTS01,UTS02,UTS03,UTS04],[UTS08,UTS01,UTS02,UTS03,UTS04,UTS05],[UTS08,UTS01,UTS02,UTS03,UTS04,UTS05,UTS06]
+      wrapper_cfg.hidden_dim: 64, 512, 4096
+      ++subjects.lebel2023_fmriprep_balanced: UTS01,[UTS01,UTS02],[UTS01,UTS02,UTS03],[UTS01,UTS02,UTS03,UTS04],[UTS01,UTS02,UTS03,UTS04,UTS05],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08],UTS04,[UTS04,UTS01],[UTS04,UTS01,UTS02]
+      # [UTS01,UTS02],[UTS01,UTS03],[UTS01,UTS04],[UTS01,UTS05],[UTS01,UTS06],[UTS01,UTS07],[UTS01,UTS08],
+      # [UTS02,UTS03],[UTS02,UTS04],[UTS02,UTS05],[UTS02,UTS06],[UTS02,UTS07],[UTS02,UTS08],
+      # [UTS03,UTS04],[UTS03,UTS05],[UTS03,UTS06],[UTS03,UTS07],[UTS03,UTS08],
+      # [UTS04,UTS05],[UTS04,UTS06],[UTS04,UTS07],[UTS04,UTS08],
+      # [UTS05,UTS06],[UTS05,UTS07],[UTS05,UTS08],
+      # [UTS06,UTS07],[UTS06,UTS08],
+      # [UTS07,UTS08],
+      # [UTS01,UTS02,UTS03],[UTS01,UTS02,UTS04],[UTS01,UTS02,UTS05],[UTS01,UTS02,UTS06],[UTS01,UTS02,UTS07],[UTS01,UTS02,UTS08],
+      # [UTS01,UTS03,UTS04],[UTS01,UTS03,UTS05],[UTS01,UTS03,UTS06],[UTS01,UTS03,UTS07],[UTS01,UTS03,UTS08],
+      # [UTS01,UTS04,UTS05],[UTS01,UTS04,UTS06],[UTS01,UTS04,UTS07],[UTS01,UTS04,UTS08],
+      # [UTS01,UTS05,UTS06],[UTS01,UTS05,UTS07],[UTS01,UTS05,UTS08],
+      # [UTS01,UTS06,UTS07],[UTS01,UTS06,UTS08],
+      # [UTS01,UTS07,UTS08],
+      # [UTS02,UTS03,UTS04],[UTS02,UTS03,UTS05],[UTS02,UTS03,UTS06],[UTS02,UTS03,UTS07],[UTS02,UTS03,UTS08],
+      # [UTS02,UTS04,UTS05],[UTS02,UTS04,UTS06],[UTS02,UTS04,UTS07],[UTS02,UTS04,UTS08],
+      # [UTS02,UTS05,UTS06],[UTS02,UTS05,UTS07],[UTS02,UTS05,UTS08],
+      # [UTS02,UTS06,UTS07],[UTS02,UTS06,UTS08],
+      # [UTS02,UTS07,UTS08],
+      # [UTS03,UTS04,UTS05],[UTS03,UTS04,UTS06],[UTS03,UTS04,UTS07],[UTS03,UTS04,UTS08],
+      # [UTS03,UTS05,UTS06],[UTS03,UTS05,UTS07],[UTS03,UTS05,UTS08],
+      # [UTS03,UTS06,UTS07],[UTS03,UTS06,UTS08],
+      # [UTS03,UTS07,UTS08],
+      # [UTS04,UTS05,UTS06],[UTS04,UTS05,UTS07],[UTS04,UTS05,UTS08],
+      # [UTS04,UTS06,UTS07],[UTS04,UTS06,UTS08],
+      # [UTS04,UTS07,UTS08],
+      # [UTS05,UTS06,UTS07],[UTS05,UTS06,UTS08],
+      # [UTS05,UTS07,UTS08],
+      # [UTS06,UTS07,UTS08],
+      # [UTS01,UTS02,UTS03,UTS04],[UTS01,UTS02,UTS03,UTS05],[UTS01,UTS02,UTS03,UTS06],[UTS01,UTS02,UTS03,UTS07],[UTS01,UTS02,UTS03,UTS08],
+      # [UTS01,UTS02,UTS04,UTS05],[UTS01,UTS02,UTS04,UTS06],[UTS01,UTS02,UTS04,UTS07],[UTS01,UTS02,UTS04,UTS08],
+      # [UTS01,UTS02,UTS05,UTS06],[UTS01,UTS02,UTS05,UTS07],[UTS01,UTS02,UTS05,UTS08],
+      # [UTS01,UTS02,UTS06,UTS07],[UTS01,UTS02,UTS06,UTS08],
+      # [UTS01,UTS02,UTS07,UTS08],
+      # [UTS01,UTS03,UTS04,UTS05],[UTS01,UTS03,UTS04,UTS06],[UTS01,UTS03,UTS04,UTS07],[UTS01,UTS03,UTS04,UTS08],
+      # [UTS01,UTS03,UTS05,UTS06],[UTS01,UTS03,UTS05,UTS07],[UTS01,UTS03,UTS05,UTS08],
+      # [UTS01,UTS03,UTS06,UTS07],[UTS01,UTS03,UTS06,UTS08],
+      # [UTS01,UTS03,UTS07,UTS08],
+      # [UTS01,UTS04,UTS05,UTS06],[UTS01,UTS04,UTS05,UTS07],[UTS01,UTS04,UTS05,UTS08],
+      # [UTS01,UTS04,UTS06,UTS07],[UTS01,UTS04,UTS06,UTS08],
+      # [UTS01,UTS04,UTS07,UTS08],
+      # [UTS01,UTS05,UTS06,UTS07],[UTS01,UTS05,UTS06,UTS08],
+      # [UTS01,UTS05,UTS07,UTS08],
+      # [UTS01,UTS06,UTS07,UTS08],
+      # [UTS02,UTS03,UTS04,UTS05],[UTS02,UTS03,UTS04,UTS06],[UTS02,UTS03,UTS04,UTS07],[UTS02,UTS03,UTS04,UTS08],
+      # [UTS02,UTS03,UTS05,UTS06],[UTS02,UTS03,UTS05,UTS07],[UTS02,UTS03,UTS05,UTS08],
+      # [UTS02,UTS03,UTS06,UTS07],[UTS02,UTS03,UTS06,UTS08],
+      # [UTS02,UTS03,UTS07,UTS08],
+      # [UTS02,UTS04,UTS05,UTS06],[UTS02,UTS04,UTS05,UTS07],[UTS02,UTS04,UTS05,UTS08],
+      # [UTS02,UTS04,UTS06,UTS07],[UTS02,UTS04,UTS06,UTS08],
+      # [UTS02,UTS04,UTS07,UTS08],
+      # [UTS02,UTS05,UTS06,UTS07],[UTS02,UTS05,UTS06,UTS08],
+      # [UTS02,UTS05,UTS07,UTS08],
+      # [UTS02,UTS06,UTS07,UTS08],
+      # [UTS03,UTS04,UTS05,UTS06],[UTS03,UTS04,UTS05,UTS07],[UTS03,UTS04,UTS05,UTS08],
+      # [UTS03,UTS04,UTS06,UTS07],[UTS03,UTS04,UTS06,UTS08],
+      # [UTS03,UTS04,UTS07,UTS08],
+      # [UTS03,UTS05,UTS06,UTS07],[UTS03,UTS05,UTS06,UTS08],
+      # [UTS03,UTS05,UTS07,UTS08],
+      # [UTS03,UTS06,UTS07,UTS08],
+      # [UTS04,UTS05,UTS06,UTS07],[UTS04,UTS05,UTS06,UTS08],
+      # [UTS04,UTS05,UTS07,UTS08],
+      # [UTS04,UTS06,UTS07,UTS08],
+      # [UTS05,UTS06,UTS07,UTS08],
+      # [UTS01,UTS02,UTS03,UTS04,UTS05],[UTS01,UTS02,UTS03,UTS04,UTS06],[UTS01,UTS02,UTS03,UTS04,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS08],
+      # [UTS01,UTS02,UTS03,UTS05,UTS06],[UTS01,UTS02,UTS03,UTS05,UTS07],[UTS01,UTS02,UTS03,UTS05,UTS08],
+      # [UTS01,UTS02,UTS03,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS06,UTS08],
+      # [UTS01,UTS02,UTS03,UTS07,UTS08],
+      # [UTS01,UTS02,UTS04,UTS05,UTS06],[UTS01,UTS02,UTS04,UTS05,UTS07],[UTS01,UTS02,UTS04,UTS05,UTS08],
+      # [UTS01,UTS02,UTS04,UTS06,UTS07],[UTS01,UTS02,UTS04,UTS06,UTS08],
+      # [UTS01,UTS02,UTS04,UTS07,UTS08],
+      # [UTS01,UTS02,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS05,UTS06,UTS08],
+      # [UTS01,UTS02,UTS05,UTS07,UTS08],
+      # [UTS01,UTS02,UTS06,UTS07,UTS08],
+      # [UTS01,UTS03,UTS04,UTS05,UTS06],[UTS01,UTS03,UTS04,UTS05,UTS07],[UTS01,UTS03,UTS04,UTS05,UTS08],
+      # [UTS01,UTS03,UTS04,UTS06,UTS07],[UTS01,UTS03,UTS04,UTS06,UTS08],
+      # [UTS01,UTS03,UTS04,UTS07,UTS08],
+      # [UTS01,UTS03,UTS05,UTS06,UTS07],[UTS01,UTS03,UTS05,UTS06,UTS08],
+      # [UTS01,UTS03,UTS05,UTS07,UTS08],
+      # [UTS01,UTS03,UTS06,UTS07,UTS08],
+      # [UTS01,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS04,UTS05,UTS06,UTS08],
+      # [UTS01,UTS04,UTS05,UTS07,UTS08],
+      # [UTS01,UTS04,UTS06,UTS07,UTS08],
+      # [UTS01,UTS05,UTS06,UTS07,UTS08],
+      # [UTS02,UTS03,UTS04,UTS05,UTS06],[UTS02,UTS03,UTS04,UTS05,UTS07],[UTS02,UTS03,UTS04,UTS05,UTS08],
+      # [UTS02,UTS03,UTS04,UTS06,UTS07],[UTS02,UTS03,UTS04,UTS06,UTS08],
+      # [UTS02,UTS03,UTS04,UTS07,UTS08],
+      # [UTS02,UTS03,UTS05,UTS06,UTS07],[UTS02,UTS03,UTS05,UTS06,UTS08],
+      # [UTS02,UTS03,UTS05,UTS07,UTS08],
+      # [UTS02,UTS03,UTS06,UTS07,UTS08],
+      # [UTS02,UTS04,UTS05,UTS06,UTS07],[UTS02,UTS04,UTS05,UTS06,UTS08],
+      # [UTS02,UTS04,UTS05,UTS07,UTS08],
+      # [UTS02,UTS04,UTS06,UTS07,UTS08],
+      # [UTS02,UTS05,UTS06,UTS07,UTS08],
+      # [UTS03,UTS04,UTS05,UTS06,UTS07],[UTS03,UTS04,UTS05,UTS06,UTS08],
+      # [UTS03,UTS04,UTS05,UTS07,UTS08],
+      # [UTS03,UTS04,UTS06,UTS07,UTS08],
+      # [UTS03,UTS05,UTS06,UTS07,UTS08],
+      # [UTS04,UTS05,UTS06,UTS07,UTS08],
+      # [UTS01,UTS02,UTS03,UTS04,UTS05,UTS06],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS08],
+      # [UTS01,UTS02,UTS03,UTS04,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS06,UTS08],
+      # [UTS01,UTS02,UTS03,UTS04,UTS07,UTS08],
+      # [UTS01,UTS02,UTS03,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS05,UTS06,UTS08],
+      # [UTS01,UTS02,UTS03,UTS05,UTS07,UTS08],
+      # [UTS01,UTS02,UTS03,UTS06,UTS07,UTS08],
+      # [UTS01,UTS02,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS04,UTS05,UTS06,UTS08],
+      # [UTS01,UTS02,UTS04,UTS05,UTS07,UTS08],
+      # [UTS01,UTS02,UTS04,UTS06,UTS07,UTS08],
+      # [UTS01,UTS02,UTS05,UTS06,UTS07,UTS08],
+      # [UTS01,UTS03,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS03,UTS04,UTS05,UTS06,UTS08],
+      # [UTS01,UTS03,UTS04,UTS05,UTS07,UTS08],
+      # [UTS01,UTS03,UTS04,UTS06,UTS07,UTS08],
+      # [UTS01,UTS03,UTS05,UTS06,UTS07,UTS08],
+      # [UTS01,UTS04,UTS05,UTS06,UTS07,UTS08],
+      # [UTS02,UTS03,UTS04,UTS05,UTS06,UTS07],[UTS02,UTS03,UTS04,UTS05,UTS06,UTS08],
+      # [UTS02,UTS03,UTS04,UTS05,UTS07,UTS08],
+      # [UTS02,UTS03,UTS04,UTS06,UTS07,UTS08],
+      # [UTS02,UTS03,UTS05,UTS06,UTS07,UTS08],
+      # [UTS02,UTS04,UTS05,UTS06,UTS07,UTS08],
+      # [UTS03,UTS04,UTS05,UTS06,UTS07,UTS08],
+      # [UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07],[UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS08],
+      # [UTS01,UTS02,UTS03,UTS04,UTS05,UTS07,UTS08],
+      # [UTS01,UTS02,UTS03,UTS04,UTS06,UTS07,UTS08],
+      # [UTS01,UTS02,UTS03,UTS05,UTS06,UTS07,UTS08],
+      # [UTS01,UTS02,UTS04,UTS05,UTS06,UTS07,UTS08],
+      # [UTS01,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08],
+      # [UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08],
+      # [UTS01,UTS02,UTS03,UTS04,UTS05,UTS06,UTS07,UTS08]
