--- a/configs/experiment_setup.yaml
+++ b/configs/experiment_setup.yaml
@@ -4,14 +4,17 @@ defaults:
 
 datasets: lebel2023_fmriprep
 
+splitting:
+  n_folds: 15
+
 meta:
-  tags: [setup]
+  tags: [setup_v2]
 
 hydra:
   sweeper:
     params:
+      latents_cfg.model: bert-base-uncased,McGill-NLP/LLM2Vec-Meta-Llama-31-8B-Instruct-mntp-unsup-simcse
       decoder_cfg: simple_mlp,brain_decoder
-      top_encoding_voxels: 768,null
-      subjects: lebel2023,lebel2023_fmriprep
+      top_encoding_voxels: null,4096
       wrapper_cfg.loss: mse,symm_nce
       ++subjects.lebel2023_fmriprep: UTS01,UTS02,UTS03
